# vap-showcase

./: Dockerfile  README.md  glama.json  mcp.json  pyproject.toml  server.json
.github/workflows/: ci-example.yml
api/: openapi.yaml
mcp/: tools.json  vap_mcp_proxy.py
sdk/vape_client/: __init__.py  async_client.py  exceptions.py  models.py  webhooks.py
