[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vap-mcp-server"
version = "1.14.1"
description = "VAP AI Media API MCP server for agent workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "VAP", email = "support@vapagent.com" }
]
keywords = [
    "mcp",
    "ai",
    "vap",
    "vapagent",
    "media-api",
    "media-generation",
    "image-generation",
    "video-generation",
    "music-generation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "httpx>=0.25.0"
]

[project.urls]
Homepage = "https://vapagent.com"
Documentation = "https://vapagent.com/developer/"
Repository = "https://github.com/vapagentmedia/vap-showcase"

[project.scripts]
vap-mcp = "mcp.vap_mcp_proxy:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp"]
